Move backend to pathom